[tool.poetry]
name = "operation"
version = "0.1.0"
description = ""
authors = ["wotsushi <wotsushi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
firebase = "^3.0.1"
python-jwt = "^4.0.0"
gcloud = "^0.18.3"
sseclient = "^0.0.27"
pycrypto = "^2.6.1"
requests-toolbelt = "^0.10.1"
firebase-admin = "^6.0.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
mypy = "^0.990"
flake8-isort = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
